parser/gramatica_v4Parser.py
# Generated from gramatica_v4.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class gramatica_v4Parser ( Parser ):

    grammarFileName = "gramatica_v4.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'EZEQUIELAQUIINICIA'", "'EZEQUIELAQUIFINALIZA'", 
                     "'int'", "'float'", "'string'", "'PARA'", "'MIENTRAS'", 
                     "'CHI_LO_HACE'", "'TONCES'", "'CHI_NO'", "'CON'", "'FUNCION'", 
                     "'VACIO'", "'RETORNA'", "'IMPRIMIR'", "'BREAK'", "'CONTINUE'", 
                     "'IMPORT'", "'SWITCH'", "'CASE'", "'DEFAULT'", "'STRUCT'", 
                     "'('", "')'", "'['", "']'", "';'", "'='", "','", "'.'", 
                     "':'", "'?'", "'*'", "'/'", "'%'", "'+'", "'-'", "'>'", 
                     "'<'", "'=='", "'!='", "'>='", "'<='", "'&&'", "'||'", 
                     "'!'" ]

    symbolicNames = [ "<INVALID>", "PROGRAMA_INICIO", "PROGRAMA_FIN", "INT_TYPE", 
                      "FLOAT_TYPE", "STRING_TYPE", "PARA", "MIENTRAS", "CHI_LO_HACE", 
                      "TONCES", "CHI_NO", "CON", "FUNCION", "VACIO", "RETORNA", 
                      "IMPRIMIR", "BREAK", "CONTINUE", "IMPORT", "SWITCH", 
                      "CASE", "DEFAULT", "STRUCT", "LPAREN", "RPAREN", "LBRACKET", 
                      "RBRACKET", "SEMI", "ASSIGN", "COMMA", "DOT", "COLON", 
                      "QUESTION", "MUL", "DIV", "MOD", "SUM", "RES", "GT", 
                      "LT", "EQ", "NEQ", "GTE", "LTE", "AND", "OR", "NOT", 
                      "ID", "NUM", "FLOAT_NUM", "STRING", "WS", "COMMENT", 
                      "ERROR_CHAR" ]

    RULE_root = 0
    RULE_instrucciones = 1
    RULE_declaracion = 2
    RULE_asignacion = 3
    RULE_cicloWhile = 4
    RULE_cicloFor = 5
    RULE_condicional = 6
    RULE_bloqueInstrucciones = 7
    RULE_switchStmt = 8
    RULE_caseStmt = 9
    RULE_defaultStmt = 10
    RULE_decStruct = 11
    RULE_campoStruct = 12
    RULE_decFuncion = 13
    RULE_parametros = 14
    RULE_tipo = 15
    RULE_retorna = 16
    RULE_imprimir = 17
    RULE_importStmt = 18
    RULE_llamadaFuncion = 19
    RULE_argumentos = 20
    RULE_condicion = 21
    RULE_orExpr = 22
    RULE_andExpr = 23
    RULE_notExpr = 24
    RULE_comparacion = 25
    RULE_ternario = 26
    RULE_expr = 27
    RULE_term = 28
    RULE_castExpr = 29
    RULE_factor = 30
    RULE_relop = 31

    ruleNames =  [ "root", "instrucciones", "declaracion", "asignacion", 
                   "cicloWhile", "cicloFor", "condicional", "bloqueInstrucciones", 
                   "switchStmt", "caseStmt", "defaultStmt", "decStruct", 
                   "campoStruct", "decFuncion", "parametros", "tipo", "retorna", 
                   "imprimir", "importStmt", "llamadaFuncion", "argumentos", 
                   "condicion", "orExpr", "andExpr", "notExpr", "comparacion", 
                   "ternario", "expr", "term", "castExpr", "factor", "relop" ]

    EOF = Token.EOF
    PROGRAMA_INICIO=1
    PROGRAMA_FIN=2
    INT_TYPE=3
    FLOAT_TYPE=4
    STRING_TYPE=5
    PARA=6
    MIENTRAS=7
    CHI_LO_HACE=8
    TONCES=9
    CHI_NO=10
    CON=11
    FUNCION=12
    VACIO=13
    RETORNA=14
    IMPRIMIR=15
    BREAK=16
    CONTINUE=17
    IMPORT=18
    SWITCH=19
    CASE=20
    DEFAULT=21
    STRUCT=22
    LPAREN=23
    RPAREN=24
    LBRACKET=25
    RBRACKET=26
    SEMI=27
    ASSIGN=28
    COMMA=29
    DOT=30
    COLON=31
    QUESTION=32
    MUL=33
    DIV=34
    MOD=35
    SUM=36
    RES=37
    GT=38
    LT=39
    EQ=40
    NEQ=41
    GTE=42
    LTE=43
    AND=44
    OR=45
    NOT=46
    ID=47
    NUM=48
    FLOAT_NUM=49
    STRING=50
    WS=51
    COMMENT=52
    ERROR_CHAR=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAMA_INICIO(self):
            return self.getToken(gramatica_v4Parser.PROGRAMA_INICIO, 0)

        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v4Parser.LPAREN)
            else:
                return self.getToken(gramatica_v4Parser.LPAREN, i)

        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v4Parser.RPAREN)
            else:
                return self.getToken(gramatica_v4Parser.RPAREN, i)

        def LBRACKET(self):
            return self.getToken(gramatica_v4Parser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(gramatica_v4Parser.RBRACKET, 0)

        def PROGRAMA_FIN(self):
            return self.getToken(gramatica_v4Parser.PROGRAMA_FIN, 0)

        def EOF(self):
            return self.getToken(gramatica_v4Parser.EOF, 0)

        def instrucciones(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v4Parser.InstruccionesContext)
            else:
                return self.getTypedRuleContext(gramatica_v4Parser.InstruccionesContext,i)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = gramatica_v4Parser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(gramatica_v4Parser.PROGRAMA_INICIO)
            self.state = 65
            self.match(gramatica_v4Parser.LPAREN)
            self.state = 66
            self.match(gramatica_v4Parser.RPAREN)
            self.state = 67
            self.match(gramatica_v4Parser.LBRACKET)
            self.state = 69 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 68
                self.instrucciones()
                self.state = 71 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 2111062338949624) != 0)):
                    break

            self.state = 73
            self.match(gramatica_v4Parser.RBRACKET)
            self.state = 74
            self.match(gramatica_v4Parser.PROGRAMA_FIN)
            self.state = 75
            self.match(gramatica_v4Parser.LPAREN)
            self.state = 76
            self.match(gramatica_v4Parser.RPAREN)
            self.state = 77
            self.match(gramatica_v4Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion(self):
            return self.getTypedRuleContext(gramatica_v4Parser.DeclaracionContext,0)


        def SEMI(self):
            return self.getToken(gramatica_v4Parser.SEMI, 0)

        def asignacion(self):
            return self.getTypedRuleContext(gramatica_v4Parser.AsignacionContext,0)


        def condicional(self):
            return self.getTypedRuleContext(gramatica_v4Parser.CondicionalContext,0)


        def switchStmt(self):
            return self.getTypedRuleContext(gramatica_v4Parser.SwitchStmtContext,0)


        def decFuncion(self):
            return self.getTypedRuleContext(gramatica_v4Parser.DecFuncionContext,0)


        def decStruct(self):
            return self.getTypedRuleContext(gramatica_v4Parser.DecStructContext,0)


        def retorna(self):
            return self.getTypedRuleContext(gramatica_v4Parser.RetornaContext,0)


        def imprimir(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ImprimirContext,0)


        def llamadaFuncion(self):
            return self.getTypedRuleContext(gramatica_v4Parser.LlamadaFuncionContext,0)


        def importStmt(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ImportStmtContext,0)


        def cicloWhile(self):
            return self.getTypedRuleContext(gramatica_v4Parser.CicloWhileContext,0)


        def cicloFor(self):
            return self.getTypedRuleContext(gramatica_v4Parser.CicloForContext,0)


        def BREAK(self):
            return self.getToken(gramatica_v4Parser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(gramatica_v4Parser.CONTINUE, 0)

        def ternario(self):
            return self.getTypedRuleContext(gramatica_v4Parser.TernarioContext,0)


        def expr(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ExprContext,0)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_instrucciones

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstrucciones" ):
                return visitor.visitInstrucciones(self)
            else:
                return visitor.visitChildren(self)




    def instrucciones(self):

        localctx = gramatica_v4Parser.InstruccionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instrucciones)
        try:
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.declaracion()
                self.state = 80
                self.match(gramatica_v4Parser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.asignacion()
                self.state = 83
                self.match(gramatica_v4Parser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.condicional()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.switchStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 87
                self.decFuncion()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 88
                self.decStruct()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 89
                self.retorna()
                self.state = 90
                self.match(gramatica_v4Parser.SEMI)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 92
                self.imprimir()
                self.state = 93
                self.match(gramatica_v4Parser.SEMI)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 95
                self.llamadaFuncion()
                self.state = 96
                self.match(gramatica_v4Parser.SEMI)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 98
                self.importStmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 99
                self.cicloWhile()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 100
                self.cicloFor()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 101
                self.match(gramatica_v4Parser.BREAK)
                self.state = 102
                self.match(gramatica_v4Parser.SEMI)
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 103
                self.match(gramatica_v4Parser.CONTINUE)
                self.state = 104
                self.match(gramatica_v4Parser.SEMI)
                pass

            elif la_ == 15:
                self.enterOuterAlt(localctx, 15)
                self.state = 105
                self.ternario()
                self.state = 106
                self.match(gramatica_v4Parser.SEMI)
                pass

            elif la_ == 16:
                self.enterOuterAlt(localctx, 16)
                self.state = 108
                self.expr()
                self.state = 109
                self.match(gramatica_v4Parser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(gramatica_v4Parser.TipoContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v4Parser.ID)
            else:
                return self.getToken(gramatica_v4Parser.ID, i)

        def ASSIGN(self):
            return self.getToken(gramatica_v4Parser.ASSIGN, 0)

        def ternario(self):
            return self.getTypedRuleContext(gramatica_v4Parser.TernarioContext,0)


        def LBRACKET(self):
            return self.getToken(gramatica_v4Parser.LBRACKET, 0)

        def NUM(self):
            return self.getToken(gramatica_v4Parser.NUM, 0)

        def RBRACKET(self):
            return self.getToken(gramatica_v4Parser.RBRACKET, 0)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_declaracion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaracion" ):
                return visitor.visitDeclaracion(self)
            else:
                return visitor.visitChildren(self)




    def declaracion(self):

        localctx = gramatica_v4Parser.DeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracion)
        self._la = 0 # Token type
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.tipo()
                self.state = 114
                self.match(gramatica_v4Parser.ID)
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==28:
                    self.state = 115
                    self.match(gramatica_v4Parser.ASSIGN)
                    self.state = 116
                    self.ternario()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.tipo()
                self.state = 120
                self.match(gramatica_v4Parser.ID)
                self.state = 121
                self.match(gramatica_v4Parser.LBRACKET)
                self.state = 122
                self.match(gramatica_v4Parser.NUM)
                self.state = 123
                self.match(gramatica_v4Parser.RBRACKET)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.match(gramatica_v4Parser.ID)
                self.state = 126
                self.match(gramatica_v4Parser.ID)
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==28:
                    self.state = 127
                    self.match(gramatica_v4Parser.ASSIGN)
                    self.state = 128
                    self.ternario()


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v4Parser.ID)
            else:
                return self.getToken(gramatica_v4Parser.ID, i)

        def ASSIGN(self):
            return self.getToken(gramatica_v4Parser.ASSIGN, 0)

        def ternario(self):
            return self.getTypedRuleContext(gramatica_v4Parser.TernarioContext,0)


        def LBRACKET(self):
            return self.getToken(gramatica_v4Parser.LBRACKET, 0)

        def expr(self):
            return self.getTypedRuleContext(gramatica_v4Parser.ExprContext,0)


        def RBRACKET(self):
            return self.getToken(gramatica_v4Parser.RBRACKET, 0)

        def DOT(self):
            return self.getToken(gramatica_v4Parser.DOT, 0)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_asignacion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsignacion" ):
                return visitor.visitAsignacion(self)
            else:
                return visitor.visitChildren(self)




    def asignacion(self):

        localctx = gramatica_v4Parser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_asignacion)
        try:
            self.state = 148
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(gramatica_v4Parser.ID)
                self.state = 134
                self.match(gramatica_v4Parser.ASSIGN)
                self.state = 135
                self.ternario()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.match(gramatica_v4Parser.ID)
                self.state = 137
                self.match(gramatica_v4Parser.LBRACKET)
                self.state = 138
                self.expr()
                self.state = 139
                self.match(gramatica_v4Parser.RBRACKET)
                self.state = 140
                self.match(gramatica_v4Parser.ASSIGN)
                self.state = 141
                self.ternario()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.match(gramatica_v4Parser.ID)
                self.state = 144
                self.match(gramatica_v4Parser.DOT)
                self.state = 145
                self.match(gramatica_v4Parser.ID)
                self.state = 146
                self.match(gramatica_v4Parser.ASSIGN)
                self.state = 147
                self.ternario()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CicloWhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MIENTRAS(self):
            return self.getToken(gramatica_v4Parser.MIENTRAS, 0)

        def LBRACKET(self):
            return self.getToken(gramatica_v4Parser.LBRACKET, 0)

        def CON(self):
            return self.getToken(gramatica_v4Parser.CON, 0)

        def condicion(self):
            return self.getTypedRuleContext(gramatica_v4Parser.CondicionContext,0)


        def RBRACKET(self):
            return self.getToken(gramatica_v4Parser.RBRACKET, 0)

        def bloqueInstrucciones(self):
            return self.getTypedRuleContext(gramatica_v4Parser.BloqueInstruccionesContext,0)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_cicloWhile

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCicloWhile" ):
                return visitor.visitCicloWhile(self)
            else:
                return visitor.visitChildren(self)




    def cicloWhile(self):

        localctx = gramatica_v4Parser.CicloWhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_cicloWhile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(gramatica_v4Parser.MIENTRAS)
            self.state = 151
            self.match(gramatica_v4Parser.LBRACKET)
            self.state = 152
            self.match(gramatica_v4Parser.CON)
            self.state = 153
            self.condicion()
            self.state = 154
            self.match(gramatica_v4Parser.RBRACKET)
            self.state = 155
            self.bloqueInstrucciones()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CicloForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARA(self):
            return self.getToken(gramatica_v4Parser.PARA, 0)

        def LBRACKET(self):
            return self.getToken(gramatica_v4Parser.LBRACKET, 0)

        def asignacion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v4Parser.AsignacionContext)
            else:
                return self.getTypedRuleContext(gramatica_v4Parser.AsignacionContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(gramatica_v4Parser.SEMI)
            else:
                return self.getToken(gramatica_v4Parser.SEMI, i)

        def CON(self):
            return self.getToken(gramatica_v4Parser.CON, 0)

        def condicion(self):
            return self.getTypedRuleContext(gramatica_v4Parser.CondicionContext,0)


        def RBRACKET(self):
            return self.getToken(gramatica_v4Parser.RBRACKET, 0)

        def bloqueInstrucciones(self):
            return self.getTypedRuleContext(gramatica_v4Parser.BloqueInstruccionesContext,0)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_cicloFor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCicloFor" ):
                return visitor.visitCicloFor(self)
            else:
                return visitor.visitChildren(self)




    def cicloFor(self):

        localctx = gramatica_v4Parser.CicloForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_cicloFor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(gramatica_v4Parser.PARA)
            self.state = 158
            self.match(gramatica_v4Parser.LBRACKET)
            self.state = 159
            self.asignacion()
            self.state = 160
            self.match(gramatica_v4Parser.SEMI)
            self.state = 161
            self.match(gramatica_v4Parser.CON)
            self.state = 162
            self.condicion()
            self.state = 163
            self.match(gramatica_v4Parser.SEMI)
            self.state = 164
            self.asignacion()
            self.state = 165
            self.match(gramatica_v4Parser.RBRACKET)
            self.state = 166
            self.bloqueInstrucciones()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CHI_LO_HACE(self):
            return self.getToken(gramatica_v4Parser.CHI_LO_HACE, 0)

        def LPAREN(self):
            return self.getToken(gramatica_v4Parser.LPAREN, 0)

        def CON(self):
            return self.getToken(gramatica_v4Parser.CON, 0)

        def condicion(self):
            return self.getTypedRuleContext(gramatica_v4Parser.CondicionContext,0)


        def RPAREN(self):
            return self.getToken(gramatica_v4Parser.RPAREN, 0)

        def bloqueInstrucciones(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v4Parser.BloqueInstruccionesContext)
            else:
                return self.getTypedRuleContext(gramatica_v4Parser.BloqueInstruccionesContext,i)


        def TONCES(self):
            return self.getToken(gramatica_v4Parser.TONCES, 0)

        def CHI_NO(self):
            return self.getToken(gramatica_v4Parser.CHI_NO, 0)

        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_condicional

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicional" ):
                return visitor.visitCondicional(self)
            else:
                return visitor.visitChildren(self)




    def condicional(self):

        localctx = gramatica_v4Parser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(gramatica_v4Parser.CHI_LO_HACE)
            self.state = 169
            self.match(gramatica_v4Parser.LPAREN)
            self.state = 170
            self.match(gramatica_v4Parser.CON)
            self.state = 171
            self.condicion()
            self.state = 172
            self.match(gramatica_v4Parser.RPAREN)
            self.state = 173
            self.bloqueInstrucciones()
            self.state = 176
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 174
                self.match(gramatica_v4Parser.TONCES)
                self.state = 175
                self.bloqueInstrucciones()


            self.state = 180
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 178
                self.match(gramatica_v4Parser.CHI_NO)
                self.state = 179
                self.bloqueInstrucciones()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueInstruccionesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACKET(self):
            return self.getToken(gramatica_v4Parser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(gramatica_v4Parser.RBRACKET, 0)

        def instrucciones(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(gramatica_v4Parser.InstruccionesContext)
            else:
                return self.getTypedRuleContext(gramatica_v4Parser.InstruccionesContext,i)


        def getRuleIndex(self):
            return gramatica_v4Parser.RULE_bloqueInstrucciones

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloqueInstrucciones" ):
                return visitor.visitBloqueInstrucciones(self)
            else:
                return visitor.visitChildren(self)




    def bloqueInstrucciones(self):

        localctx = gramatica_v4Parser.BloqueInstruccionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_bloqueInstrucciones)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.match(gramatica_v4Parser.LBRACKET)
            self.state = 184 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 183
                self.instrucciones()
                self.state = 186 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 2111062338949624) != 0)):
                    break
